# steerd

./: CMakeLists.txt
.github/workflows/: build.yml
contrib/openwrt/: Makefile
src/: CMakeLists.txt  mac.c  mac.h  main.c  steerd_debug.c  steerd_debug.h
src/dstructs/: aplist.c  aplist.h  stalist.c  stalist.h
src/ubus/: ubus.c  ubus.h
